--- a/movieInfo.html
+++ b/movieInfo.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/movieInfo.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>Cineplex</title>
@@ -15,7 +15,9 @@
 
 <body>
     <div class="nav">
-        <a class="cineplexIcon" onclick="scrollTopAnimated(1)"><h1>Cineplex</h1></a>
+        <a class="cineplexIcon" onclick="goHome()">
+            <h1>Cineplex</h1>
+        </a>
         <div class="searchContainer">
             <input type="text" class="homeSearchBox" id="homeSearchText" placeholder="Search..." />
             <button type="submit" class="btn" id="homeSearch"><i class="fas fa-search"></i></button>
@@ -23,36 +25,40 @@
             <button type="submit" class="btn" id="search"><i class="fas fa-search"></i></button>
         </div>
     </div>
-    <div class="container" id="header">
-        <i class="fas fa-chevron-left prev"></i>
-        <i class="fas fa-chevron-right next"></i>
-        <div class="headerPlaceholder">
-            <!-- Movies Autofill Here From Database -->
+    <div class="container">
+        <div class="movieInfoHeaderPlaceholder">
+            <!-- Movie Header Here -->
         </div>
-    </div>
-    <div class="discoverMovies">
-        <div class="upcoming discoverableMovies">
-            <h1>Upcoming</h1>
-            <i class="fas fa-chevron-left upcomingPrev"></i>
-            <i class="fas fa-chevron-right upcomingNext"></i>
-            <div class="upcomingPlaceholder">
-                <!-- Movies Autofill Here From Database -->
+        <div class="movieInformation">
+            <div class="summary">
+                <div class="movieInfoSummaryPlaceholder">
+                    <!-- Summary -->
+                </div>
             </div>
-        </div>
-        <div class="popular discoverableMovies">
-            <h1>Popular</h1>
-            <i class="fas fa-chevron-left popularPrev"></i>
-            <i class="fas fa-chevron-right popularNext"></i>
-            <div class="popularPlaceholder">
-                <!-- Movies Autofill Here From Database -->
+            <div class="cast">
+                <h1>Cast</h1>
+                <i class="fas fa-chevron-left castPrev"></i>
+                <i class="fas fa-chevron-right castNext"></i>
+                <div class="movieInfoCastPlaceholder">
+                    <!-- Cast -->
+                </div>
             </div>
-        </div>
-        <div class="topRated discoverableMovies">
-            <h1>Top Rated</h1>
-            <i class="fas fa-chevron-left topRatedPrev"></i>
-            <i class="fas fa-chevron-right topRatedNext"></i>
-            <div class="topRatedPlaceholder">
-                <!-- Movies Autofill Here From Database -->
+            <!-- <div class="cast">
+                <div class="movieThumbnail">
+                    <img class="thumbPoster" src="https://image.tmdb.org/t/p/w500/kc3M04QQAuZ9woUvH3Ju5T7ZqG5.jpg">
+                    <div class="thumbInfo">
+                        <span>
+                            <p class="thumbTitle">Brad Pitt</p>
+                            <p class="thumbGenre">Roy McBride</p>
+                        </span>
+                    </div>
+                </div>
+            </div> -->
+            <div class="trailers">
+                <h1>Trailers</h1>
+                <div class="movieInfoTrailerPlaceholder">
+                    <!-- Trailers -->
+                </div>
             </div>
         </div>
     </div>
@@ -85,7 +91,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/loadmovies.js"></script>
+    <script src="js/movieInfo.js"></script>
 </body>
 
 </html>
