--- a/searchMovie.html
+++ b/searchMovie.html
@@ -57,6 +57,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- Custom Scripts -->
+    <script src="js/keys.js"></script>
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
     <script src="js/seachApp.js"></script>
