--- a/movieInfo.html
+++ b/movieInfo.html
@@ -25,6 +25,12 @@
             <button type="submit" class="btn" id="search"><i class="fas fa-search"></i></button>
         </div>
     </div>
+
+    <!-- Loading square for squar.red network -->
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+
     <div class="container">
         <div class="movieInfoHeaderPlaceholder">
             <!-- Movie Header Here -->
@@ -64,7 +70,7 @@
     </div>
     <footer>
         <div class="footer-container">
-            <span class="copyright">© 2019 Jonathan Monty</span>
+            <span class="copyright">© <script type="text/javascript">document.write(new Date().getFullYear());</script> Jonathan Monty</span>
             <div class="tmdb">
                 <a href="https://www.themoviedb.org/" target="_blank"><img src="img/tmdbLogo.svg"></a>
             </div>
@@ -93,6 +99,11 @@
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
     <script src="js/movieInfo.js"></script>
+    <script>
+        $(window).on("load",function(){
+            $(".loader-wrapper").fadeOut("slow");
+        });
+    </script>
 </body>
 
 </html>
