--- a/searchMovie.html
+++ b/searchMovie.html
@@ -23,6 +23,12 @@
             <button type="submit" class="btn" id="homeSearch"><i class="fas fa-search"></i></button>
         </div>
     </div>
+
+    <!-- Loading square for squar.red network -->
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+
     <div class="container">
         <div class="searchResultsContainer" id="header">
             <h1 class="searchTitle"></h1>
@@ -33,7 +39,7 @@
     </div>
     <footer>
         <div class="footer-container">
-            <span class="copyright">© 2019 Jonathan Monty</span>
+            <span class="copyright">© <script type="text/javascript">document.write(new Date().getFullYear());</script> Jonathan Monty</span>
             <div class="tmdb">
                 <a href="https://www.themoviedb.org/" target="_blank"><img src="img/tmdbLogo.svg"></a>
             </div>
@@ -61,6 +67,11 @@
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
     <script src="js/seachApp.js"></script>
+    <script>
+        $(window).on("load",function(){
+            $(".loader-wrapper").fadeOut("slow");
+        });
+    </script>
 </body>
 
 </html>
